# myconfbot

./: .env.example  .gitignore  README.md  pyproject.toml
migrations/: add_admin_notes_to_order_statuses.py  check_migration.py  create_database.py  create_tables.py  database.sql  database_by_sql.sql  migrate_to_postgres.py  migration_log_20250915_002347.txt  migration_report_20250915_002347.json
migrations/backups/: sqlite_backup_20250915_002347.db
src/myconfbot/: __init__.py  __main__.py  bot.py  config.py  init_db.py  logging_config.py
src/myconfbot/bot/: confectionery_bot.py
src/myconfbot/handlers/: __init__.py  admin_handlers.py  base_handler.py  main_handlers.py  order_handlers.py  recipe_handlers.py
src/myconfbot/handlers/admin/: __init__.py  admin_base.py  admin_main.py  category_manager.py  content_management.py  order_admin_handler.py  order_management.py  photo_manager.py  product_constants.py  product_creator.py  product_editor.py  product_management.py  product_states.py  product_viewer.py  stats_management.py  user_management.py
src/myconfbot/handlers/shared/: admin_constants.py  constants.py  product_constants.py  states_manager.py
src/myconfbot/handlers/user/: auth_handlers.py  base_user_handler.py  main_handlers.py  my_order_constants.py  my_order_handler.py  order_callbacks.py  order_constants.py  order_handler.py  order_handlers.py  order_processor.py  order_product_viewer.py  (+3 more)
src/myconfbot/keyboards/: __init__.py  admin_keyboards.py  profile_keyboards.py  user_keyboards.py
src/myconfbot/models/: __init__.py  base.py  category.py  order.py  order_status.py  photo.py  product.py  recipe.py  user.py
src/myconfbot/services/: __init__.py  auth_service.py  user_service.py
src/myconfbot/utils/: __init__.py  check_db_structure.py  content_manager.py  database.py  file_utils.py  init_postgres.py  models.py  text_converter.py
tests/: conftest.py
