[project]
name = "myconfbot"
version = "0.1.0"
description = "Telegram bot for confectioner"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "env>=0.1.0",
    "httpx>=0.28.1",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "pytelegrambotapi>=4.29.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "python-multipart>=0.0.20",
]
